--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -12,10 +12,12 @@
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" type="'Text'" widthfactor="'5'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Pricelist Type'" field="'PriceListTypeName'" type="'Text'" fixedwidth="'80'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'" fixedwidth="'80'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Checkpoint ID'" field="'Entity.PricelistStateBackupId'" type="'Text'" fixedwidth="'100'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Pricelist Source'" field="'PricelistSourceName'" type="'Text'" fixedwidth="'110'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created By'" field="'UserName'" type="'Text'" widthfactor="'2'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'Datetime'" fixedwidth="'120'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Sent'" field="'Entity.IsSent'" disablesorting="true" fixedwidth="'50'">
         <vr-icon icontype="dataItem.Entity.IsSent"></vr-icon>
     </vr-datagridcolumn>
-   
+
 </vr-datagrid>
