--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileEditor.html
@@ -46,7 +46,7 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModal.postalCode" label="Postal Code"></vr-textbox>
                         </vr-columns>
-                        <vr-common-company-setting-selector on-ready="scopeModal.onCompanySettingSelectorReady" normal-col-num="6"></vr-common-company-setting-selector>
+                        <vr-common-company-setting-selector on-ready="scopeModal.onCompanySettingSelectorReady" normal-col-num="6" showaddbutton></vr-common-company-setting-selector>
 
                     </vr-row>
                     <vr-row removeline>
