--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -5,7 +5,7 @@
              menuactions="gridMenuActions"
              enableautoexport="true" defaultsortbyfieldname="ctrl.defaultSortByFieldName" defaultsortdirection="ctrl.defaultSortDirection">
     <vr-datagridcolumn widthfactor="5" invisibleheader headertext="'Is Sent'" disablesorting="true" ng-show="!hideSelectedColumn" fixedwidth="'30'">
-        <vr-check value="dataItem.isSelected" ng-if="!dataItem.Entity.IsSent"></vr-check>
+        <vr-check value="dataItem.isSelected"></vr-check>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Pricelist ID'" field="'Entity.PriceListId'" type="'Text'" fixedwidth="'80'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Customer Name'" field="'OwnerName'" type="'Text'" widthfactor="'3'"></vr-datagridcolumn>
