--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleAreaTechnicalSettings/Templates/SaleAreaTechnicalSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleAreaTechnicalSettings/Templates/SaleAreaTechnicalSettingsTemplate.html
@@ -1,1 +1,10 @@
-﻿
+﻿<vr-tabs>
+    <vr-tab header="'Pricing Rules'">
+        <vr-row>
+            <vr-columns width="1/2row">
+                <vr-genericdata-genericruledefinition-selector isrequired="true" customlabel="Customer Tariff Rule" on-ready="scopeModel.onCustomerRuleDefinitionReady">
+                </vr-genericdata-genericruledefinition-selector>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
+</vr-tabs>
