adding subViews Selective
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44257

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/SubViews/Templates/subViewSelectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/SubViews/Templates/subViewSelectiveTemplate.html
@@ -4,7 +4,7 @@
                    datasource="scopeModel.templateConfigs"
                    selectedvalues="scopeModel.selectedTemplateConfig"
                    datavaluefield="ExtensionConfigurationId"
-                   datatextfield="Title" label="Assignment type"
+                   datatextfield="Title" label="Sub Views"
                    isrequired="true"
                    hideremoveicon>
         </vr-select>
