--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerSubViewsGrid.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerSubViewsGrid.html
@@ -1,5 +1,6 @@
 ﻿<vr-button type="Add" data-onclick="addNewSubView" standalone></vr-button>
 <vr-datagrid datasource="subViews"
+             ondeleterow="removerow"
              on-ready="onGridReady"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
