--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/SupplierInvoiceItemsReport.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/SupplierInvoiceItemsReport.rdlc
@@ -1422,6 +1422,22 @@
           <DataField>OriginalAmountAfterCommission</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
+        <Field Name="AmountAfterCommissionWithTaxes">
+          <DataField>AmountAfterCommissionWithTaxes</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="OriginalAmountAfterCommissionWithTaxes">
+          <DataField>OriginalAmountAfterCommissionWithTaxes</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="OriginalSupplierAmountWithTaxes">
+          <DataField>OriginalSupplierAmountWithTaxes</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="SupplierAmountWithTaxes">
+          <DataField>SupplierAmountWithTaxes</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>TOne.WhS.Invoice.Entities</rd:DataSetName>
