--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceReport.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceReport.rdlc
@@ -1591,6 +1591,9 @@
                             <Parameter Name="TotalAmountAfterCommission">
                               <Value>=Parameters!TotalAmountAfterCommission.Value</Value>
                             </Parameter>
+                            <Parameter Name="CustomerIdDescription">
+                              <Value>=Fields!CustomerIdDescription.Value</Value>
+                            </Parameter>
                           </Parameters>
                           <Top>0.1875in</Top>
                           <Height>4.11458in</Height>
