--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AssignmentDefinitionEditor.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AssignmentDefinitionEditor.html
@@ -10,7 +10,7 @@
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Setting'">
-                    <vr-accountmanager-assignmentdefinition-selective on-ready="scopeModel.onDirectiveReady"></vr-accountmanager-assignmentdefinition-selective>
+                    <vr-accountmanager-assignmentdefinition-selective on-ready="scopeModel.onAssignmentDefinitionSelectorReady"></vr-accountmanager-assignmentdefinition-selective>
                 </vr-tab>
                 <vr-tabs>
         </vr-form>
