--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
@@ -1,9 +1,9 @@
 ﻿<vr-tab header="'Settings'">
-    <vr-accountmanager-accountmanagerdefinitionsettings on-ready="onSelectiveReady"></vr-accountmanager-accountmanagerdefinitionsettings>
+    <vr-accountmanager-accountmanagerdefinitionsettings on-ready="onAccountManagerDefinitionReady"></vr-accountmanager-accountmanagerdefinitionsettings>
         </vr-tab>
         <vr-tab header="'Assignment Definitions'">
             <vr-columns colnum="12">
-                <vr-accountmanager-accountmanagerdefinition-assignmentdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-assignmentdefinition-grid>
+                <vr-accountmanager-accountmanagerdefinition-assignmentdefinition-grid on-ready="onAssignmentDefinitionGridReady"></vr-accountmanager-accountmanagerdefinition-assignmentdefinition-grid>
             </vr-columns>
         </vr-tab>
         <vr-tab header="'Sub Views'">
