--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceReport.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceReport.rdlc
@@ -1299,7 +1299,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Round(Fields!SaleAmount.Value,2)</Value>
+                              <Value>=Round(Fields!SaleAmountWithTaxes.Value,2)</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -1334,7 +1334,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Round(Fields!AmountAfterCommission.Value,2)</Value>
+                              <Value>=Round(Fields!AmountAfterCommissionWithTaxes.Value,2)</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -1580,7 +1580,7 @@
                               <Value>=Parameters!Minutes.Value</Value>
                             </Parameter>
                             <Parameter Name="TotalAmount">
-                              <Value>=Parameters!Total.Value</Value>
+                              <Value>=Fields!SaleAmountWithTaxes.Value</Value>
                             </Parameter>
                             <Parameter Name="Currency">
                               <Value>=Parameters!Currency.Value</Value>
@@ -1589,7 +1589,7 @@
                               <Value>=Parameters!DisplayCommission.Value</Value>
                             </Parameter>
                             <Parameter Name="TotalAmountAfterCommission">
-                              <Value>=Parameters!TotalAmountAfterCommission.Value</Value>
+                              <Value>=Fields!AmountAfterCommissionWithTaxes.Value</Value>
                             </Parameter>
                             <Parameter Name="CustomerIdDescription">
                               <Value>=Fields!CustomerIdDescription.Value</Value>
