adding drill down to account manager grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44295

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
@@ -4,5 +4,8 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true">
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
     <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
