--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/TelesSynchronizer/Templates/TelesIdbSWSyncTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/TelesSynchronizer/Templates/TelesIdbSWSyncTemplate.html
@@ -1,16 +1,16 @@
 ﻿<whs-routesync-idbdatamanagers-settings on-ready="scopeModel.onIdbDataManagerSettingsDirectiveReady" normal-col-num="6" isrequired="true"></whs-routesync-idbdatamanagers-settings>
 <vr-row>
     <vr-columns width="1/4row">
-        <vr-textbox value="scopeModel.mappingSeparator" label="Separator" type="text" isrequired></vr-textbox>
+        <vr-textbox value="scopeModel.mappingSeparator" label="Mapping Separator" type="text" isrequired></vr-textbox>
     </vr-columns>
     <vr-columns width="1/4row">
-        <vr-textbox value="scopeModel.numberOfOptions" type="number" minvalue="1" decimalprecision="0" label="Number Of Options" isrequired></vr-textbox>
+        <vr-textbox value="scopeModel.numberOfMappings" label="Number Of Mappings" type="number" decimalprecision="0" minvalue="1"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/4row">
-        <vr-textbox value="scopeModel.supplierOptionsSeparator" type="text" label="Supplier Options Separator"></vr-textbox>
+        <vr-textbox value="scopeModel.supplierOptionsSeparator" label="Supplier Options Separator" type="text"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/4row">
-        <vr-switch value="scopeModel.useTwoSuppliersMapping" label="Use Two Suppliers Mapping"></vr-switch>
+        <vr-textbox value="scopeModel.numberOfOptions" label="Number Of Options" type="number" decimalprecision="0" minvalue="1" isrequired></vr-textbox>
     </vr-columns>
 </vr-row>
 <vr-row>
