--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/SupplierGenerationCustomSectionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/SupplierGenerationCustomSectionTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-common-timezone-selector on-ready="scopeModel.onTimeZoneSelectorReady" normal-col-num="{{ctrlSupplierGeneration.normalColNum}}" selectedvalues="scopeModel.selectedTimeZone" onselectionchanged="    scopeModel.onTimeZoneSelectionChanged"></vr-common-timezone-selector>
 <vr-columns colnum="{{ctrlSupplierGeneration.normalColNum}}">
-    <vr-textbox type="number" label="Commission" value="scopeModel.commission" minvalue="-100" maxvalue="100" onvaluechanged="scopeModel.onCommissionFocusChanged"></vr-textbox>
+    <vr-textbox type="number" label="Commission (%)" value="scopeModel.commission" minvalue="-100" maxvalue="100" onvaluechanged="scopeModel.onCommissionFocusChanged"></vr-textbox>
 </vr-columns>
 <vr-columns colnum="{{ctrlSupplierGeneration.normalColNum}}">
     <vr-select datasource="scopeModel.commissionTypes"
