Implementing invoice settings and invoice type for carrier account and carrier profile
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44355

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierProfileGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierProfileGridTemplate.html
@@ -8,6 +8,8 @@
     <vr-datagridcolumn headertext="'Carrier Profile Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Company'" field="'Entity.Settings.Company'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Country'" field="'CountryName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Invoice Type'" field="'InvoiceTypeDescription'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Invoice Setting'" field="'InvoiceSettingName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
